--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,10 +1,10 @@
-.App {
+/* .App {
     display: flex;
     flex-direction: column;
     width: 100vw;
     height: 100vh;
     font-family: Rubik;
-}
+} */
 
 .fill {
     display: flex;
@@ -24,4 +24,8 @@
     color: white;
     font-weight: bold;
     font-size: 17px;
+}
+
+.row {
+    --bs-gutter-x: 0!important;
 }
