--- a/client/src/pages/Home/Home.css
+++ b/client/src/pages/Home/Home.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: Menlo;
-    src: url("../assets/fonts/MenloRegular.ttf");
+    src: url("../../assets/fonts/MenloRegular.ttf");
 }
 
 .app-container {
