--- a/client/src/App.css
+++ b/client/src/App.css
@@ -29,4 +29,67 @@
 .row {
     --bs-gutter-x: 0!important;
 }
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box; }
 
+:root {
+  --primary-color: #0e8080;
+  --text-content: #000;
+  --layout-bg: #ced9d9;
+  --layout-header-bg: rgba(206, 217, 217, 0.8);
+  --player-bg: #c0d8d8;
+  --text-item-hover: #0f7070;
+  --sidebar-bg: hsla(0, 0%, 100%, 0.3);
+  --alpha-bg: hsla(0, 0%, 100%, 0.3); }
+
+html {
+  scroll-behavior: smooth;
+  font-family: "Mulish", sans-serif !important;
+  font-size: 80%;
+  border: 0;
+  background-color: #fff;
+  padding-top: 0 !important;
+  margin: 0;
+  overflow-x: hidden; }
+
+h1 {
+  color: var(--text-content); }
+
+h2 {
+  color: var(--text-content); }
+
+h3 {
+  color: var(--text-content); }
+
+h4 {
+  color: var(--text-content); }
+
+h5 {
+  color: var(--text-content); }
+
+h6 {
+  color: var(--text-content); }
+
+table,
+input {
+  font-size: 1.4rem; }
+
+label {
+  font-size: 1.4rem;
+  font-weight: 420; }
+
+p {
+  margin: 0 !important; }
+
+  
+a:hover {
+  color: var(--text-item-hover)!important;
+  text-decoration: none; 
+}
+
+
+a {
+    color: var(--text-content)!important;
+}
